[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/placeholder/platform_metallic/light_sensitive_platform/Light Sensitive Platform/Sensitive_Platform_NM.png" type="Texture" id=1]
[ext_resource path="res://assets/placeholder/platform_metallic/light_sensitive_platform/Light Sensitive Platform/Sensitive_Platform.png" type="Texture" id=2]
[ext_resource path="res://assets/placeholder/platform_metallic/gradient_light_texture_red.tres" type="Gradient" id=3]
[ext_resource path="res://assets/placeholder/platform_metallic/gradient_light_texturegreen.tres" type="Gradient" id=4]
[ext_resource path="res://scripts/metallic_platform.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 147, 10 )

[sub_resource type="GradientTexture2D" id=2]
gradient = ExtResource( 3 )
width = 200
height = 200
fill = 1
fill_from = Vector2( 0.516667, 0.504167 )

[sub_resource type="GradientTexture2D" id=3]
gradient = ExtResource( 3 )
width = 200
height = 200
fill = 1
fill_from = Vector2( 0.525, 0.520833 )

[sub_resource type="GradientTexture2D" id=4]
gradient = ExtResource( 4 )
width = 200
height = 200
fill = 1
fill_from = Vector2( 0.516667, 0.516667 )

[sub_resource type="GradientTexture2D" id=5]
gradient = ExtResource( 4 )
width = 200
height = 200
fill = 1
fill_from = Vector2( 0.495833, 0.525 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 142, 22 )

[node name="metallic_platform" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 260
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 3.3

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
normal_map = ExtResource( 1 )

[node name="Light2DLeft1" type="Light2D" parent="."]
position = Vector2( -138, -11 )
texture = SubResource( 2 )
energy = 1.2

[node name="Light2DRight1" type="Light2D" parent="."]
position = Vector2( 141, -13 )
texture = SubResource( 3 )
energy = 1.2

[node name="Light2DLeft2" type="Light2D" parent="."]
position = Vector2( -138, -11 )
texture = SubResource( 4 )
energy = 1.2

[node name="Light2DRight2" type="Light2D" parent="."]
position = Vector2( 141, -13 )
texture = SubResource( 5 )
energy = 1.2

[node name="FlairChecker" type="Area2D" parent="."]
collision_layer = 260
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlairChecker"]
position = Vector2( 2, 4 )
shape = SubResource( 6 )
